test/invalid/test4.5.puzzle
# This puzzle is unsolvable
4
 1  8  2 11
14  0  5  9
 7 12 10 13
